# d_agent

./: .context  .gitignore  README.md  pyproject.toml  requirements.txt
src/core/llm/: openai_llm.py
src/dev_agent/: __init__.py  __main__.py  main.py
src/dev_agent/config/: settings.py
src/dev_agent/core/: context.py
src/dev_agent/core/git/: git_manager.py
src/dev_agent/core/llm/: base.py  openai_llm.py
task_management_api/app/models/: __init__.py  models.py
task_management_api/app/schemas/: __init__.py  schemas.py
